--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ dash (0.5.4-8) unstable; urgency=low
   * debian/dash.templates.in: don't mention 'distribution policy' or
     'Debian policy' at all, but talk only about POSIX-compliance; run
     debconf-updatepo (closes: #455550).
+  * debian/control: Standards-Version: 3.7.3.0.
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 02 Mar 2008 21:24:19 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 02 Mar 2008 21:36:20 +0000
 
 dash (0.5.4-7) unstable; urgency=low
 
