--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ dash (0.5.4-9) unstable; urgency=low
 
   * debian/diff/0046-Fix-bitwise-AND-and-OR-operator-parsing.diff: new:
     Fix bitwise AND and OR operator parsing (closes: #470914).
+  * debian/dash.menu: change menu section from Apps/Shells to
+    Applications/Shells (thx Christian Perrier).
 
- -- Gerrit Pape <pape@smarden.org>  Thu, 17 Apr 2008 20:20:21 +0000
+ -- Gerrit Pape <pape@smarden.org>  Thu, 17 Apr 2008 20:26:59 +0000
 
 dash (0.5.4-8) unstable; urgency=low
 
