--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -1,57 +1,47 @@
+# Translation of dash debconf templates to French
+# Copyright (C) 2008 Christian Perrier <bubulle@debian.org>
+# This file is distributed under the same license as the dash package.
 #
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#
-#    Some information specific to po-debconf are available at
-#            /usr/share/doc/po-debconf/README-trans
-#         or http://www.debian.org/intl/l10n/po-debconf/README-trans
-#
-#    Developers do not need to manually edit POT or PO files.
-#
-# Denis Barbier <barbier@debian.org>, 2003-2006
+# Denis Barbier <barbier@debian.org>, 2003-2006.
+# Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>, 2007.
+# Christian Perrier <bubulle@debian.org>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.4.17\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2008-03-02 21:54+0000\n"
-"PO-Revision-Date: 2007-11-11 21:15+0100\n"
-"Last-Translator: Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>\n"
+"PO-Revision-Date: 2008-03-04 09:01+0100\n"
+"Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Install dash as /bin/sh?"
-msgstr "Faut-il mettre en place un lien de /bin/sh vers dash ?"
+msgstr "Faut-il mettre en place un lien de /bin/sh vers dashÂ ?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
-msgstr "Par défaut, sur un système Debian, /bin/sh est un lien vers bash."
+msgstr ""
+"Par dÃ©faut, sur un systÃ¨me Debian ou un systÃ¨me basÃ© sur Debian , /bin/sh "
+"est un lien vers bash."
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-#, fuzzy
-#| msgid ""
-#| "However, since the distribution policy requires all shell scripts using /"
-#| "bin/sh to be POSIX compliant, any shell that conforms to POSIX, such as "
-#| "dash, can serve as /bin/sh. You may wish to do this because dash is "
-#| "faster and smaller than bash."
 msgid ""
 "However, since the default shell is required to be POSIX-compliant, any "
 "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 "wish to do this because dash is faster and smaller than bash."
 msgstr ""
-"Cependant, comme la charte Debian impose que tous les scripts utilisant /bin/"
-"sh soient conformes à la norme POSIX, /bin/sh peut être n'importe quel "
-"interpréteur de commandes (« shell ») conforme à cette norme, tel que dash. "
-"Vous pouvez vouloir choisir cette option puisque dash est plus rapide et "
+"Cependant, comme l'interprÃ©teur de commandes (Â«Â shellÂ Â») par dÃ©faut du "
+"systÃ¨me doit Ãªtre conforme Ã  la norme POSIX, /bin/sh peut Ãªtre n'importe "
+"quel interprÃ©teur de commandes conforme Ã  cette norme, notamment dash. Il "
+"peut Ãªtre prÃ©fÃ©rable de choisir cette option car dash est plus rapide et "
 "plus petit que bash."
