* debian/po/fi.po: [INTL:fi] Updated Finnish translation of the debconf     templates (thx Esko Arajärvi, closes: #469466).

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ dash (0.5.4-9) unstable; urgency=low
     Applications/Shells (thx Christian Perrier).
   * debian/po/fr.po: [INTL:fr] French debconf templates translation update
     (thx Christian Perrier, closes: #469253).
+  * debian/po/fi.po: [INTL:fi] Updated Finnish translation of the debconf
+    templates (thx Esko Arajärvi, closes: #469466).
 
- -- Gerrit Pape <pape@smarden.org>  Thu, 17 Apr 2008 20:32:51 +0000
+ -- Gerrit Pape <pape@smarden.org>  Thu, 17 Apr 2008 20:33:41 +0000
 
 dash (0.5.4-8) unstable; urgency=low
 
