--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.5.4-3\n"
+"Project-Id-Version: dash 0.5.4-8\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2008-03-02 21:54+0000\n"
-"PO-Revision-Date: 2007-11-12 23:49+0200\n"
+"PO-Revision-Date: 2008-03-05 13:25+0200\n"
 "Last-Translator: Esko Arajärvi <edu@iki.fi>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -23,24 +23,18 @@ msgstr "Asennetaanko dash linkitettynä tiedostoon /bin/sh?"
 #: ../dash.templates.in:1001
 msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
 msgstr ""
-"Debianissa ja Debianiin pohjautuvissa järjestelmissä /bin/sh:na toimii "
-"oletuksena bash."
+"Debianissa ja Debianiin pohjautuvissa järjestelmissä oletuskomentotulkkina /"
+"bin/sh toimii bash."
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-#, fuzzy
-#| msgid ""
-#| "However, since the distribution policy requires all shell scripts using /"
-#| "bin/sh to be POSIX compliant, any shell that conforms to POSIX, such as "
-#| "dash, can serve as /bin/sh. You may wish to do this because dash is "
-#| "faster and smaller than bash."
 msgid ""
 "However, since the default shell is required to be POSIX-compliant, any "
 "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 "wish to do this because dash is faster and smaller than bash."
 msgstr ""
-"Koska jakelupolitiikkana kuitenkin on, että kaikkien /bin/sh:ta käyttävien "
-"komentotiedostojen tulee olla POSIX-yhteensopivia, mikä tahansa POSIXin "
-"vaatimukset täyttävä kuori, esimerkiksi dash, voi toimia /bin/sh:na. Saatat "
-"haluta käyttää dashia, koska se on nopeampi ja pienempi kuin bash."
+"Koska oletuskomentotulkin tulee olla POSIX-yhteensopiva, mikä tahansa "
+"POSIXin vaatimukset täyttävä komentotulkki, esimerkiksi dash, voi toimia /"
+"bin/sh:na. Saatat haluta käyttää dashia, koska se on nopeampi ja pienempi "
+"kuin bash."
