* debian/po/de.po: [INTL:de] updated German debconf translation (thx     Helge Kreutzmann, closes: #469755).

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,10 @@ dash (0.5.4-9) unstable; urgency=low
     (thx Christian Perrier, closes: #469253).
   * debian/po/fi.po: [INTL:fi] Updated Finnish translation of the debconf
     templates (thx Esko Arajärvi, closes: #469466).
+  * debian/po/de.po: [INTL:de] updated German debconf translation (thx
+    Helge Kreutzmann, closes: #469755).
 
- -- Gerrit Pape <pape@smarden.org>  Thu, 17 Apr 2008 20:33:41 +0000
+ -- Gerrit Pape <pape@smarden.org>  Thu, 17 Apr 2008 20:34:15 +0000
 
 dash (0.5.4-8) unstable; urgency=low
 
