--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dash (0.5.4-10) unstable; urgency=low
+
+  * debian/po/it.po: [INTL:it] Italian debconf templates translation
+    (thx Luca Monducci, closes: #479361).
+
+ -- Gerrit Pape <pape@smarden.org>  Wed, 11 Jun 2008 21:28:47 +0000
+
 dash (0.5.4-9) unstable; urgency=low
 
   * debian/diff/0046-Fix-bitwise-AND-and-OR-operator-parsing.diff: new:
