--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -11,21 +11,20 @@
 #    Developers do not need to manually edit POT or PO files.
 #
 # Ilgiz Kalmetev <translator@ilgiz.pp.ru>, 2003.
-# Yuri Kozlov <kozlov.y@gmail.com>, 2007.
+# Yuri Kozlov <kozlov.y@gmail.com>, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.5.3-6.1\n"
+"Project-Id-Version: dash 0.5.4-9\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2008-03-02 21:54+0000\n"
-"PO-Revision-Date: 2007-11-16 19:04+0300\n"
+"PO-Revision-Date: 2008-05-05 20:44+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: boolean
 #. Description
@@ -44,19 +43,14 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-#, fuzzy
-#| msgid ""
-#| "However, since the distribution policy requires all shell scripts using /"
-#| "bin/sh to be POSIX compliant, any shell that conforms to POSIX, such as "
-#| "dash, can serve as /bin/sh. You may wish to do this because dash is "
-#| "faster and smaller than bash."
 msgid ""
 "However, since the default shell is required to be POSIX-compliant, any "
 "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 "wish to do this because dash is faster and smaller than bash."
 msgstr ""
-"Однако, так как политика дистрибутива требует, чтобы все сценарии оболочки, "
-"использующие /bin/sh, были совместимы с POSIX, то /bin/sh может указывать на "
-"любую оболочку, совместимую с POSIX. Так как dash совместима с POSIX, то она "
-"может использоваться как /bin/sh. Если сравнивать c bash, то основными "
-"преимуществами dash являются большая скорость и меньший размер."
+"Однако, так как от оболочки командной строки по умолчанию требуется "
+"только соответствовать POSIX, то любая оболочка, соответствующая POSIX, "
+"типа dash, может работать в качестве /bin/sh. Причинами, по которым вам стоит "
+"рассмотреть переход на dash, являются большая скорость и меньший размер по "
+"сравнению с bash."
+
