--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ dash (0.5.4-10) unstable; urgency=low
     (thx Luca Monducci, closes: #479361).
   * debian/po/ru.po: [INTL:ru] Russian debconf templates translation
     update (thx Yuri Kozlov, closes: #479592).
+  * debian/po/gl.po: [INTL:gl] Galician debconf template translation
+    for dash (thx Jacobo Tarrio, closes: #480978).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 11 Jun 2008 21:30:28 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 11 Jun 2008 21:32:12 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
