--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ dash (0.5.4-10) unstable; urgency=low
     update (thx Yuri Kozlov, closes: #479592).
   * debian/po/gl.po: [INTL:gl] Galician debconf template translation
     for dash (thx Jacobo Tarrio, closes: #480978).
+  * debian/po/ja.po: [INTL:ja] updated Japanese debconf translation
+    (thx Kenshi Muto, closes: #483509).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 11 Jun 2008 21:32:12 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 11 Jun 2008 21:34:23 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
