--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,11 @@ dash (0.5.4-10) unstable; urgency=low
     (thx Kenshi Muto, closes: #483509).
   * debian/control: Homepage: http://gondor.apana.org.au/~herbert/dash/
     (closes: #484665).
+  * debian/diff/0047--MAN-add-missing-right-parenthesis...diff: new;
+    [MAN] add missing right parenthesis in section Redirection (closes:
+    #481365).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 11 Jun 2008 21:40:28 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 10:51:27 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
