--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,10 @@ dash (0.5.4-10) unstable; urgency=low
     [SHELL] add -l option to force login shell (closes: #483287).
   * debian/po/tr.po: new; [INTL:tr] Turkish debconf template translation
     for dash (thx Mert Dirik, closes: #486571).
+  * debian/po/bg.po: new; [INTL:bg] Bulgarian debconf translation (thx
+    Damyan Ivanov, closes: #486800).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:16:31 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:18:53 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
