--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,10 @@ dash (0.5.4-10) unstable; urgency=low
     for dash (thx Mert Dirik, closes: #486571).
   * debian/po/bg.po: new; [INTL:bg] Bulgarian debconf translation (thx
     Damyan Ivanov, closes: #486800).
+  * debian/po/vi.po: [INTL:vi] Vietnamese debconf templates translation
+    update (thx Clytie Siddall, closes: #486801).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:18:53 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:21:28 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
