--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,10 @@ dash (0.5.4-10) unstable; urgency=low
     Damyan Ivanov, closes: #486800).
   * debian/po/vi.po: [INTL:vi] Vietnamese debconf templates translation
     update (thx Clytie Siddall, closes: #486801).
+  * debian/po/cs.po: [l10n] Updated Czech translation of dash debconf
+    messages (thx Miroslav Kure, closes: #487266).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:21:28 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:23:29 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
