--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.5.4-3\n"
+"Project-Id-Version: dash 0.5.4-9.1\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2008-03-02 21:54+0000\n"
-"PO-Revision-Date: 2007-11-26 21:46+0000\n"
+"PO-Revision-Date: 2008-06-20 09:19+0100\n"
 "Last-Translator: Ricardo Silva <ardoric@gmail.com>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,6 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-#, fuzzy
 #| msgid ""
 #| "However, since the distribution policy requires all shell scripts using /"
 #| "bin/sh to be POSIX compliant, any shell that conforms to POSIX, such as "
@@ -43,8 +42,7 @@ msgid ""
 "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 "wish to do this because dash is faster and smaller than bash."
 msgstr ""
-"No entanto, uma vez que a política da distribuição exige que todos os "
-"scripts que usem /bin/sh sejam compatíveis com POSIX, qualquer shell que "
-"seja compatível com POSIX, tal como a dash, pode servir como /bin/sh. Pode-"
-"lhe ser preferível fazer isto uma vez que a dash é mais pequena e rápida que "
-"a bash."
+"No entanto, uma vez que é necessário que a shell por omissão seja compatível com "
+"POSIX, qualquer shell compatível com POSIX, tal como a dash, serve para colocar "
+"em /bin/sh. Isto pode ser algo desejável uma vez que a dash é mais rápida e mais "
+"pequena que a bash."
