--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,10 @@ dash (0.5.4-10) unstable; urgency=low
     messages (thx Miroslav Kure, closes: #487266).
   * debian/po/pt.po: [INTL:pt] Updated Portuguese translation for
     debconf messages (thx Ricardo Silva, closes: #487290).
+  * debian/po/ko.po: [INTL:ko] Korean dash debconf PO translation (thx
+    Sunjae Park, closes: #487897).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:25:07 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:26:46 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
