--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -1,13 +1,13 @@
 # Korean translations for dash package
 # dash 패키지에 대한 한국어 번역문.
-# Sunjae Park <darehanl@gmail.com>, 2007.
+# Sunjae Park <darehanl@gmail.com>, 2007 - 2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dash\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2008-03-02 21:54+0000\n"
-"PO-Revision-Date: 2007-11-15 15:19-0500\n"
+"PO-Revision-Date: 2008-06-24 18:27-0400\n"
 "Last-Translator: Sunjae Park <darehanl@gmail.com>\n"
 "Language-Team: Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,18 +31,11 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-#, fuzzy
-#| msgid ""
-#| "However, since the distribution policy requires all shell scripts using /"
-#| "bin/sh to be POSIX compliant, any shell that conforms to POSIX, such as "
-#| "dash, can serve as /bin/sh. You may wish to do this because dash is "
-#| "faster and smaller than bash."
 msgid ""
 "However, since the default shell is required to be POSIX-compliant, any "
 "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 "wish to do this because dash is faster and smaller than bash."
 msgstr ""
-"하지만 배포판의 정책에 의하면 /bin/sh을 사용하는 셸 스크립트는 모두 POSIX과 "
-"호환되어야 한다고 지정하고 있으며, dash와 같이 POSIX 호환 셸이기만 하면 /bin/"
-"sh로 사용할 수 있습니다. dash는 bash보다 작고 빠르기 때문에 dash를 사용하길 "
-"원하실 수 있습니다."
+"하지만 기본 셸은 모두 POSIX 호환이어야 하므로, dash와 같이 POSIX 호환 셸"
+"이기만 하면 /bin/sh로 사용할 수 있습니다. dash는 bash보다 작고 빠르기 때문에 "
+"dash를 사용하길 원하실 수 있습니다."
