--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,10 @@ dash (0.5.4-10) unstable; urgency=low
     debconf messages (thx Ricardo Silva, closes: #487290).
   * debian/po/ko.po: [INTL:ko] Korean dash debconf PO translation (thx
     Sunjae Park, closes: #487897).
+  * debian/po/eu.po: new; [INTL:eu] dash debconf templates Basque
+    translation (thx xabier bilbao, closes: #488057).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:26:46 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:28:08 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
