--- a/debian/changelog
+++ b/debian/changelog
@@ -29,8 +29,10 @@ dash (0.5.4-10) unstable; urgency=low
     Sunjae Park, closes: #487897).
   * debian/po/eu.po: new; [INTL:eu] dash debconf templates Basque
     translation (thx xabier bilbao, closes: #488057).
+  * debian/po/pt_BR.po: [INTL:pt_BR] Brazilian Portuguese debconf
+    templates (thx Adriano Rafael Gomes, closes: #488390).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:28:08 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:29:45 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
