--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -1,24 +1,17 @@
-#
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#
-#    Some information specific to po-debconf are available at
-#            /usr/share/doc/po-debconf/README-trans
-#         or http://www.debian.org/intl/l10n/po-debconf/README-trans
-#
-#    Developers do not need to manually edit POT or PO files.
+# dash Brazilian Portuguese translation
+# Copyright (C) 2008 THE dash'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the dash package.
+# André Luís Lopes <andrelop@debian.org>, 2008.
+# Adriano Rafael Gomes <adrianorg@gmail.com>, 2008.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dash\n"
+msgstr "pt_BR utf-8\n"
+"Project-Id-Version: dash 0.5.4-9.1\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2008-03-02 21:54+0000\n"
-"PO-Revision-Date: 2006-12-19 21:23-0200\n"
-"Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
-"Language-Team: Debian-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
+"PO-Revision-Date: 2008-06-28 01:36-0300\n"
+"Last-Translator: Adriano Rafael Gomes <adrianorg@gmail.com>\n"
+"Language-Team: l10n Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -27,18 +20,18 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Install dash as /bin/sh?"
-msgstr "Instalar dash como /bin/sh?"
+msgstr "Instalar o dash como /bin/sh?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
 msgstr ""
+"O shell /bin/sh padrão no Debian e em sistemas baseados no Debian é o bash."
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-#, fuzzy
 #| msgid ""
 #| "Bash is the default /bin/sh on a Debian system.  However, since the "
 #| "Debian policy requires all shell scripts using /bin/sh to be POSIX "
@@ -50,9 +43,7 @@ msgid ""
 "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 "wish to do this because dash is faster and smaller than bash."
 msgstr ""
-"O bash é o /bin/sh padrão em um sistema Debian. Porém, uma vez que nossa "
-"política requer que todos os scripts shell usando /bin/sh sejam compatíveis "
-"com o padrão POSIX, qualquer shell que esteja em conformidade com o padrão "
-"POSIX pode servir como /bin/sh. Uma vez que o dash é compatível com o padrão "
-"POSIX, o mesmo pode ser usado como /bin/sh. Você pode desejar usar o dash "
-"devido ao mesmo ser mais rápido e menor que o bash."
+"Contudo, como é requerido que o shell padrão seja compatível com o padrão "
+"POSIX, qualquer shell que esteja em conformidade com o padrão POSIX, tal "
+"como o dash, pode servir como /bin/sh. Você pode desejar fazer isto porque "
+"o dash é mais rápido e menor que o bash."
