--- a/debian/changelog
+++ b/debian/changelog
@@ -31,8 +31,10 @@ dash (0.5.4-10) unstable; urgency=low
     translation (thx xabier bilbao, closes: #488057).
   * debian/po/pt_BR.po: [INTL:pt_BR] Brazilian Portuguese debconf
     templates (thx Adriano Rafael Gomes, closes: #488390).
+  * debian/po/ro.po: new; [l10n:ro] dash: New  Romanian translation of
+    po-debconf templates (thx Eddy Petrișor, closes: #488435).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:29:45 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:31:22 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
