--- a/debian/changelog
+++ b/debian/changelog
@@ -33,8 +33,9 @@ dash (0.5.4-10) unstable; urgency=low
     templates (thx Adriano Rafael Gomes, closes: #488390).
   * debian/po/ro.po: new; [l10n:ro] dash: New  Romanian translation of
     po-debconf templates (thx Eddy Petrișor, closes: #488435).
+  * debian/control: Standards-Version: 3.8.0.1.
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 11:31:22 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 15:59:18 +0000
 
 dash (0.5.4-9) unstable; urgency=low
 
