--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+dash (0.5.4-11) unstable; urgency=low
+
+  * debian/diff/0045-Fix-null-pointer-dereference.diff,
+    debian/diff/0046-Fix-bitwise-AND-and-OR-operator-parsing.diff,
+    debian/diff/0047--MAN-add-missing-right-parenthesis...diff: remove;
+    applied upstream.
+  * debian/diff/0048--SHELL-add-l-option-to-force-login-shell.diff:
+    remove; fixed upstream.
+  * debian/diff/0044--*..0061--*: new; from upstream git.
+    * 0055--BUILTIN-Fixed-3-4-argument-cases-for-test-per-POSIX.diff:
+      [BUILTIN] Fixed 3,4-argument cases for test per POSIX (closes:
+      #455828).
+  * debian/diff/0044-run-aclocal-autoconf-autoheader-automake.diff:
+    redo as 0062-run-aclocal-autoconf-autoheader-automake.diff.
+
+ -- Gerrit Pape <pape@smarden.org>  Wed, 16 Jul 2008 19:24:54 +0000
+
 dash (0.5.4-10) unstable; urgency=low
 
   * debian/po/it.po: [INTL:it] Italian debconf templates translation
